<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.licenses.LicenseKeyActivity">

    <include
        android:id="@+id/top_bar"
        layout="@layout/top_bar" />

    <LinearLayout
        android:id="@+id/linear1Licensekey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLicenseKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_license_key_head"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/etLicenseKey"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/license_key_here"
            android:text="ACSLICENCEKEY"
            android:textSize="35sp" />


    </LinearLayout>


    <Button
        android:id="@+id/bt_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="18dp"
        android:background="@drawable/rounded_button_red"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:visibility="gone"/>

    <Button
        android:id="@+id/bt_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spn_organisation"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/rounded_button_red"
        android:text="@string/next"
        android:textColor="@color/white" />


    <include
        layout="@layout/progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</RelativeLayout>