<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/customColorPrimary"
        app:popupTheme="@style/CustomPopup">

        <com.healthrfid.blood.control.components.FontAwesomeIcons
            android:id="@+id/top_bar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_back"
            android:textSize="20sp"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/top_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:text="@string/title_settings" />

        <com.healthrfid.blood.control.components.FontAwesomeIcons
            android:id="@+id/top_bar_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_menu"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:visibility="gone"
            android:layout_gravity="end" />

</android.support.v7.widget.Toolbar>
