<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.hrfid.acs.view.user_authentication.BCUserLoginFragment">

    <RelativeLayout
        android:id="@+id/bc_login_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:background="@drawable/rounded_button_red"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_margin="@dimen/bt_ok_padding"/>

        <LinearLayout
            android:id="@+id/header_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBCRed"
            android:minHeight="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/bc_header_user_login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--<TextView-->
            <!--android:id="@+id/header_textview"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center"-->
            <!--android:padding="16dp"-->
            <!--android:text="@string/bc_header_verbally_id_patient"-->
            <!--android:textAlignment="center"-->
            <!--android:textColor="@color/colorWhite"-->
            <!--android:textSize="18sp"-->
            <!--android:textStyle="bold" />-->

        <LinearLayout
            android:id="@+id/user_login_linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/rfid_icon_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:src="@drawable/scan_user_card_high" />

            <EditText
                android:id="@+id/et_barcode_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""
                android:inputType="text"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                android:maxLength="16"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/rfidtext_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str_rfid"
                android:textColor="@color/black"
                android:visibility="gone"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/footerImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:paddingBottom="2dp"
                android:src="@drawable/ic_acs_horizontal_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str_copyright_symbol_MAIN"
                android:textAlignment="center"
                android:textSize="12sp">
            </TextView>

        </LinearLayout>

        <include
            layout="@layout/progressbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

</FrameLayout>
