<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_10dp"
    android:background="@color/white">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="MODIFY STUDY"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="@color/colorBCRed"/>



    <LinearLayout
        android:id="@+id/linearLayout_study_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/bt_ok_padding"
        android:layout_marginRight="@dimen/bt_ok_padding"
        android:layout_marginTop="@dimen/bt_ok_padding"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="@dimen/activity_5dp_margin"
            android:text="@string/study_name"/>

        <EditText
            android:id="@+id/edtStudyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Study Name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_study_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/bt_ok_padding"
        android:layout_marginRight="@dimen/bt_ok_padding"
        android:layout_marginTop="@dimen/bt_ok_padding"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="@dimen/activity_5dp_margin"
            android:text="@string/study_id"/>

        <EditText
            android:id="@+id/edtStudyId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Study ID"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/bt_ok_padding"
        android:layout_marginRight="@dimen/bt_ok_padding"
        android:layout_marginTop="@dimen/bt_ok_padding"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="@dimen/activity_5dp_margin"
            android:text="@string/doctor_code"/>

        <EditText
            android:id="@+id/edtDocCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Doctor Code"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/bt_ok_padding"
        android:layout_marginRight="@dimen/bt_ok_padding"
        android:layout_marginTop="@dimen/bt_ok_padding"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="@dimen/activity_5dp_margin"
            android:text="@string/study_status"/>

     <!--   <Spinner
            android:id="@+id/spnStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_5dp_margin"/>-->

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spnStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_background"
            android:layout_margin="@dimen/activity_5dp_margin" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/bt_ok_padding"
        android:layout_marginRight="@dimen/bt_ok_padding"
        android:layout_marginTop="@dimen/bt_ok_padding"
        android:layout_marginBottom="@dimen/bt_ok_padding"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/bt_ok_padding"
            android:gravity="center">

        <ImageButton
            android:id="@+id/btn_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_5dp_margin"
            android:background="@mipmap/ic_date_calendar"/>

        <TextView
            android:id="@+id/txt_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/start_select_date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btn_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_5dp_margin"
                android:background="@mipmap/ic_date_calendar"/>

            <TextView
                android:id="@+id/txt_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/end_select_date"/>

        </LinearLayout>

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="2">
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SUBMIT"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_weight="1"
        android:layout_margin="@dimen/bt_ok_padding"
        android:background="@color/colorBCRed"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CANCEL"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:textStyle="bold"
        android:layout_margin="@dimen/bt_ok_padding"
        android:background="@color/black"/>

</LinearLayout>

</LinearLayout>